--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.freelance_serial">
+   <uses-feature android:name="android.hardware.usb.host" />
    <application
         android:label="freelance_serial"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
+            android:directBootAware="true"
             android:exported="true"
             android:launchMode="singleTop"
             android:theme="@style/LaunchTheme"
@@ -28,15 +30,16 @@
 		        <action android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED" />
 	        </intent-filter>
 
-	    <meta-data 
-            android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
-		    android:resource="@xml/device_filter" />
+            <meta-data 
+                android:name="android.hardware.usb.action.USB_DEVICE_ATTACHED"
+                android:resource="@xml/device_filter" />
+            <meta-data
+                android:name="flutterEmbedding"
+                android:value="2" />
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
-        <meta-data
-            android:name="flutterEmbedding"
-            android:value="2" />
+       
     </application>
     
 </manifest>
