--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   webview_flutter: ^4.0.1
   usb_serial: ^0.3.0
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
