Add internet permission for androidmanifest

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.freelance_serial">
    <uses-feature android:name="android.hardware.usb.host" />
+   <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="freelance_serial"
         android:name="${applicationName}"
