Change App Display Name

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
    <uses-feature android:name="android.hardware.usb.host" />
    <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="freelance_serial"
+        android:label="USB to Webview"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
